inserito modulo JOOMSCAN

--- a/Views/Modulo/Edit.cshtml
+++ b/Views/Modulo/Edit.cshtml
@@ -4,6 +4,7 @@
     bool nessus = Model.NESSUS != null;
     bool dnsrecon = Model.DNSRECON != null;
     bool droopescan = Model.DROOPE != null;
+    bool joomscan = Model.JOOMSCAN != null;
     bool infoga = Model.INFOGA != null;
     bool infogaemail = Model.INFOGAEMAIL != null;
     bool wapiti = Model.WAPITI != null;
@@ -507,15 +508,6 @@
 
                     <hr />
                     <div class="col-sm-12">
-                        <!--<div class="col-sm-6">
-        <div class="form-group row">
-            <div class="col-sm-3">
-                <label class="control-label" asp-for="@Model.INFOGA.Dominio"></label>
-            </div>
-            <input class="col-sm-9" asp-for="@Model.INFOGA.Dominio" />
-        </div>
-       
-    </div>-->
                         <div class="col-sm-7" style="margin:0 auto; float:none">
                             <div class="form-group row">
                                 <h5 asp-for="@(Model.INFOGA.ComandoPersonalizzato)">Comando Personalizzato</h5>
@@ -596,15 +588,6 @@
 
                                     <hr />
                                     <div class="col-sm-12">
-                                        <!--<div class="col-sm-6">
-                                           
-                                            <div class="form-group row">
-                                                <div class="col-sm-3">
-                                                    <label class="control-label" asp-for="@Model.INFOGAEMAIL.Email"></label>
-                                                </div>
-                                                <input class="col-sm-9" asp-for="@Model.INFOGAEMAIL.Email" />
-                                            </div>
-                                        </div>-->
                                         <div class="col-sm-7" style="margin:0 auto; float:none">
                                             <div class="form-group row">
                                                 <h4 asp-for="@(Model.INFOGAEMAIL.ComandoPersonalizzato)">Comando Personalizzato</h4>
@@ -684,14 +667,6 @@
                     <hr />
                     <div class="col-sm-12">
                         <div class="col-sm-12">
-                            <!--<div class="col-sm-6">
-        <div class="form-group row">
-            <h4 asp-for="@(Model.WAPITI.URL)">URL</h4>
-            <input class="form-control" asp-for="@(Model.WAPITI.URL)" />
-        </div>
-
-    </div>
-        -->
                             <div class="col-sm-7" style="margin:0 auto; float:none">
                                 <div class="form-group row">
                                     <h5 asp-for="@(Model.WAPITI.ComandoPersonalizzato)">Comando Personalizzato</h5>
@@ -919,13 +894,6 @@
                                         <hr />
                                         <h4>Sempre</h4>
                                         <hr />
-                                        <div class="form-group row">
-                                            <div class="col-sm-4">
-                                                <label class="control-label">Scegli la connection string </label>
-                                            </div>
-                                             <div class="col-sm-1"></div>
-                                            <input type="text" class="col-sm-5" asp-for="@Model.SQLMAP.connectionString" />  
-                                        </div>
                                         <div class="form-group row">
                                                 <div class="col-sm-6">
                                                     <label class="control-label">
@@ -1456,4 +1424,83 @@
                             </div>
                             </form>
 }
+ @* -----JOOMSCAN----- *@
+    else if (joomscan)
+    {
+        <h2><em>Modifica modulo</em><strong> @(Model.JOOMSCAN.Nome)</strong></h2>
+        <hr />
+           <form asp-action="Edit" name="joomscanForm">
+                                <input type="hidden" asp-for="@Model.JOOMSCAN.Applicazione" value="@webmva.Models.APPLICAZIONE.JOOMSCAN" />
+ <input type="hidden" asp-for="@Model.JOOMSCAN.ID" />
+                                  <div class="row panel panel-default panel-body">
+
+
+                                <div class="col-sm-12">
+                                    <div class="col-sm-7" style="margin:0 auto; float:none">
+                                        <div class="form-group">
+                                            <h4 asp-for="@(Model.JOOMSCAN.Nome)">Nome Modulo</h4>
+                                            <input class="form-control" asp-for="@(Model.JOOMSCAN.Nome)" />
+                                        </div>
+                                    </div>
+
+                                    <hr />
+                                    <div class="col-sm-12">
+                                        <div class="col-sm-12">
+                                            <div class="col-sm-7" style="margin:0 auto; float:none">
+                                                <div class="form-group row">
+                                                    <h4 asp-for="@(Model.JOOMSCAN.ComandoPersonalizzato)">Comando Personalizzato</h4>
+                                                    <input class="form-control" asp-for="@(Model.JOOMSCAN.ComandoPersonalizzato)" />
+                                                </div>
+
+                                            </div>
+
+                                        </div>
+
+                                    </div>
+                                    <div class="col-sm-12">
+                                        <h4>Tipi di enumerazione</h4>
+                                        <hr />
+                                       <div class="form-group row">
+                                                    <div class="col-sm-6">
+                                                        <label class="control-label">
+                                                            <input type="checkbox" asp-for="@Model.JOOMSCAN.EnumerateComponents" /> Enumerate Components (-ec)
+                                                        </label>
+                                                    </div>
+                                                </div>
+                                          <div class="form-group row">
+                                            <div class="col-sm-4">
+                                                <label class="control-label">Scegli il cookie </label>
+                                            </div>
+                                             <div class="col-sm-1"></div>
+                                            <input type="text" class="col-sm-5" asp-for="@Model.JOOMSCAN.Cookie" />  
+                                        </div>
+                                          <div class="form-group row">
+                                            <div class="col-sm-4">
+                                                <label class="control-label">Scegli lo user agent </label>
+                                            </div>
+                                             <div class="col-sm-1"></div>
+                                            <input type="text" class="col-sm-5" asp-for="@Model.JOOMSCAN.UserAgent" />  
+                                        </div>
+                                        <div class="col-sm-12">
+                                            <hr/>
+                                            <div class="col-sm-5">
+                                                <div clas="form-group row">
+                                                 <a href="https://github.com/rezasp/joomscan"target="_blank"><span class="glyphicon glyphicon-info-sign" style="font-size:90%"></span>
+                                        consulta il documentazione di Joomscan</a>
+                                        </div>
+                                        </div>
+                                        <div class="col-sm-1"></div>
+                                        <div class="col-sm-6 text-right">
+                                            <div class="form-group row">
+                                                <input type="submit" asp-action="Edit"  asp-route-id="@Model.JOOMSCAN.ID" class="btn btn-default" value="Salva" />&nbsp;&nbsp; |
+                                                <a asp-action="Index"> Torna alla lista</a>
+                                            </div>
+                                        </div>
+                                        </div>
+                                    </div>
+                                </div>
+</div>
+                            </form>
+}
+
 }
