--- a/Views/Modulo/Create.cshtml
+++ b/Views/Modulo/Create.cshtml
@@ -103,6 +103,12 @@
                                                     <span class="glyphicon glyphicon-play" style="font-size:65%"></span>
                                                 </a>
                                             </li>
+                                            <li>
+                                                <a   data-toggle="collapse" href="#JOOMSCAN">
+                                                    Joomscan
+                                                    <span class="glyphicon glyphicon-play" style="font-size:65%"></span>
+                                                </a>
+                                            </li>
                                         </ul>
 
                                     </div>
@@ -617,14 +623,6 @@
                                     <hr />
                                     <div class="col-sm-12">
                                         <div class="col-sm-12">
-
-                                            <!-- <div class="form-group row">
-                                                <h4 asp-for="@(Model.WAPITI.URL)">URL</h4>
-                                                <input class="form-control" asp-for="@(Model.WAPITI.URL)" />
-                                            </div>-->
-
-
-
                                             <div class="col-sm-7" style="margin:0 auto; float:none">
                                                 <div class="form-group row">
                                                     <h4 asp-for="@(Model.WAPITI.ComandoPersonalizzato)">Comando Personalizzato</h4>
@@ -859,18 +857,9 @@
                                             <input class="form-control" asp-for="@(Model.DROOPE.Nome)" />
                                         </div>
                                     </div>
-
                                     <hr />
                                     <div class="col-sm-12">
                                         <div class="col-sm-12">
-
-                                            <!--  <div class="form-group row">
-                                                <h4 asp-for="@(Model.DROOPE.URL)">URL</h4>
-                                                <input class="form-control" asp-for="@(Model.DROOPE.URL)" />
-                                            </div>-->
-
-
-
                                             <div class="col-sm-7" style="margin:0 auto; float:none">
                                                 <div class="form-group row">
                                                     <h4 asp-for="@(Model.DROOPE.ComandoPersonalizzato)">Comando Personalizzato</h4>
@@ -881,6 +870,14 @@
 
                                         </div>
 
+                                    </div>
+                                     <div class="col-sm-12">
+                                        <div class="col-sm-7" style="margin:0 auto; float:none">
+                                            <div class="form-group row">
+                                                <h4 asp-for="@(Model.DNSRECON.NameServer)">Name Server</h4>
+                                                <input class="form-control" asp-for="@(Model.DNSRECON.NameServer)" />
+                                            </div>
+                                        </div>
                                     </div>
                                     <div class="col-sm-12">
                                         <h4>Tipi di enumerazione</h4>
@@ -939,19 +936,90 @@
 
             <div class="panel panel-sidebar">
                 <div class="panel-heading">
-                    <a   data-toggle="collapse" href="#vedi2">
+                    <a   data-toggle="collapse" href="#JOOMSCAN">
                         <strong>
-                            vedi
+                            JOOMSCAN
                         </strong>
                         <span class="caret"></span>
                     </a>
                 </div>
-                <div class="collapse col-5" id="vedi2">
+                <div class="collapse col-5" id="JOOMSCAN">
                     <div class="panel-body">
                         <h4>
                             <strong> Configura modulo </strong>
                         </h4>
-                        <hr>
+                         <hr>
+                            <form asp-action="Create" name="joomscanForm">
+                                <input type="hidden" asp-for="@Model.JOOMSCAN.Applicazione" value="@webmva.Models.APPLICAZIONE.JOOMSCAN" />
+
+
+                                <div class="col-sm-12">
+                                    <div class="col-sm-7" style="margin:0 auto; float:none">
+                                        <div class="form-group">
+                                            <h4 asp-for="@(Model.JOOMSCAN.Nome)">Nome Modulo</h4>
+                                            <input class="form-control" asp-for="@(Model.JOOMSCAN.Nome)" />
+                                        </div>
+                                    </div>
+
+                                    <hr />
+                                    <div class="col-sm-12">
+                                        <div class="col-sm-12">
+                                            <div class="col-sm-7" style="margin:0 auto; float:none">
+                                                <div class="form-group row">
+                                                    <h4 asp-for="@(Model.JOOMSCAN.ComandoPersonalizzato)">Comando Personalizzato</h4>
+                                                    <input class="form-control" asp-for="@(Model.JOOMSCAN.ComandoPersonalizzato)" />
+                                                </div>
+
+                                            </div>
+ <hr/>
+                                        </div>
+
+                                    </div>
+                                   
+                                    <div class="col-sm-12">
+                                        <h4>Tipi di enumerazione</h4>
+                                        <hr />
+                                       <div class="form-group row">
+                                                    <div class="col-sm-6">
+                                                        <label class="control-label">
+                                                            <input type="checkbox" asp-for="@Model.JOOMSCAN.EnumerateComponents" /> Enumerate Components (-ec)
+                                                        </label>
+                                                    </div>
+                                                </div>
+                                          <div class="form-group row">
+                                            <div class="col-sm-4">
+                                                <label class="control-label">Scegli il cookie </label>
+                                            </div>
+                                             <div class="col-sm-1"></div>
+                                            <input type="text" class="col-sm-5" asp-for="@Model.JOOMSCAN.Cookie" />  
+                                        </div>
+                                          <div class="form-group row">
+                                            <div class="col-sm-4">
+                                                <label class="control-label">Scegli lo user agent </label>
+                                            </div>
+                                             <div class="col-sm-1"></div>
+                                            <input type="text" class="col-sm-5" asp-for="@Model.JOOMSCAN.UserAgent" />  
+                                        </div>
+                                        <div class="col-sm-12">
+                                            <hr/>
+                                            <div class="col-sm-5">
+                                                <div clas="form-group row">
+                                                 <a href="https://github.com/rezasp/joomscan"target="_blank"><span class="glyphicon glyphicon-info-sign" style="font-size:90%"></span>
+                                        consulta il documentazione di Joomscan</a>
+                                        </div>
+                                        </div>
+                                        <div class="col-sm-1"></div>
+                                        <div class="col-sm-6 text-right">
+                                            <div class="form-group row">
+                                                <input type="submit" asp-action="Create" asp-route-cosa="joomscan" class="btn btn-default" value="Crea" />&nbsp;&nbsp; |
+                                                <a asp-action="Index"> Torna alla lista</a>
+                                            </div>
+                                        </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </form>
 
                     </div>
                 </div>
@@ -997,21 +1065,6 @@
 
                                     <hr />
                                     <div class="col-sm-12">
-                                        <!-- <div class="col-sm-6">
-                                            <div class="form-group row">
-                                                <div class="col-sm-3">
-                                                    <label class="control-label" asp-for="@Model.DNSRECON.Dominio"></label>
-                                                </div>
-                                                <input class="col-sm-9" asp-for="@Model.DNSRECON.Dominio" />
-                                            </div>
-                                            <div class="form-group row">
-                                                <div class="col-sm-3">
-                                                    <label class="control-label" asp-for="@Model.DNSRECON.NameServer"></label>
-                                                </div>
-                                                <input class="col-sm-9" asp-for="@Model.DNSRECON.NameServer" />
-                                            </div>
-
-                                        </div>-->
                                         <div class="col-sm-7" style="margin:0 auto; float:none">
                                             <div class="form-group row">
                                                 <h4 asp-for="@(Model.DROOPE.ComandoPersonalizzato)">Comando Personalizzato</h4>
@@ -1019,6 +1072,10 @@
                                             </div>
                                         </div>
                                     </div>
+                                    <hr/>
+                                   
+                                    
+                                
                                     <div class="col-sm-12">
                                         <h4>Tipi di enumerazione</h4>
                                         <hr />
@@ -1257,15 +1314,6 @@
 
                                     <hr />
                                     <div class="col-sm-12">
-                                        <!--<div class="col-sm-6">
-                                            
-                                            <div class="form-group row">
-                                                <div class="col-sm-3">
-                                                    <label class="control-label" asp-for="@Model.INFOGAEMAIL.Email"></label>
-                                                </div>
-                                                <input class="col-sm-9" asp-for="@Model.INFOGAEMAIL.Email" />
-                                            </div>
-                                        </div>-->
                                         <div class="col-sm-7" style="margin:0 auto; float:none">
                                             <div class="form-group row">
                                                 <h4 asp-for="@(Model.INFOGAEMAIL.ComandoPersonalizzato)">Comando Personalizzato</h4>
@@ -1376,13 +1424,6 @@
                                         <hr />
                                         <h4>Sempre</h4>
                                         <hr />
-                                        <div class="form-group row">
-                                            <div class="col-sm-4">
-                                                <label class="control-label">Scegli la connection string </label>
-                                            </div>
-                                             <div class="col-sm-1"></div>
-                                            <input type="text" class="col-sm-5" asp-for="@Model.SQLMAP.connectionString" />  
-                                        </div>
                                         <div class="form-group row">
                                                 <div class="col-sm-6">
                                                     <label class="control-label">
@@ -1783,15 +1824,6 @@
 
                                     <hr />
                                     <div class="col-sm-12">
-                                        <!--<div class="col-sm-6">
-                                            
-                                            <div class="form-group row">
-                                                <div class="col-sm-3">
-                                                    <label class="control-label" asp-for="@Model.INFOGAEMAIL.Email"></label>
-                                                </div>
-                                                <input class="col-sm-9" asp-for="@Model.INFOGAEMAIL.Email" />
-                                            </div>
-                                        </div>-->
                                         <div class="col-sm-7" style="margin:0 auto; float:none">
                                             <div class="form-group row">
                                                 <h4 asp-for="@(Model.INFOGAEMAIL.ComandoPersonalizzato)">Comando Personalizzato</h4>
