--- a/Views/Progetto/Delete.cshtml
+++ b/Views/Progetto/Delete.cshtml
@@ -5,6 +5,7 @@ var contNessus= 0;
 var contOpenVAS = 0;
 var contDnsRecon = 0;
 var contDroope = 0;
+var contJoomscan = 0;
 var contInfoga = 0;
 var contInfogaEmail = 0;
 var contWapiti = 0;
@@ -54,6 +55,7 @@ var contWifite = 0;}
                             if(item.Modulo is webmva.Models.ModuloNMAP) {contOpenVAS++;}
                             if(item.Modulo is webmva.Models.ModuloDNSRECON) {contDnsRecon++;}
                             if(item.Modulo is webmva.Models.ModuloDROOPE) {contDroope++;}
+                            if(item.Modulo is webmva.Models.ModuloJOOMSCAN) {contJoomscan++;}
                             if(item.Modulo is webmva.Models.ModuloINFOGA) {contInfoga++;}
                             if(item.Modulo is webmva.Models.ModuloINFOGAEMAIL){contInfogaEmail++;}
                             if(item.Modulo is webmva.Models.ModuloWAPITI) {contWapiti++;}
@@ -185,6 +187,34 @@ var contWifite = 0;}
                         @foreach (var item in Model.ModuliProgetto) {
                             
                                 @if(item.Modulo is webmva.Models.ModuloDROOPE){
+                                <tr>
+                                <td></td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Modulo.Nome)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Modulo.Comando)
+                                    </td>
+                                </tr>
+                               
+                                }
+                                }
+                                </table>
+                                </dd>    
+                        }  
+                        @if(contJoomscan!=0){
+                                
+                            <dd>Joomscan</dd>
+                            <dd>
+                            <table class="table">
+                                <tr>
+                                    <th> </th>
+                                    <th>Modulo</th>
+                                    <th>Comando</th>
+                                </tr>
+                        @foreach (var item in Model.ModuliProgetto) {
+                            
+                                @if(item.Modulo is webmva.Models.ModuloJOOMSCAN){
                                 <tr>
                                 <td></td>
                                     <td>
